* Fix diagnostic table wrapping

--- a/IonInspector/static/css/inspector.trace.css
+++ b/IonInspector/static/css/inspector.trace.css
@@ -1,7 +1,3 @@
-tr td:nth-child(3), tr td:nth-child(4) {
-	white-space: nowrap;
-}
-
 .show_hide_table_spacing {
 	padding-right: 20px;
 }
